[package]
name = "rust_pact"
version = "0.1.0"
edition = "2021"

description = "Rust rewrite of pypact (excluding tools.py)"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = { version = "0.4" }
blake2 = "0.10"
base64 = "0.21"
hex = "0.4"
ed25519-dalek = "1.0"
rand = "0.8"
