[package]
name = "rust_pact"
version = "0.1.2"
edition = "2021"

description = "Pact smart contract client for kadena blockchain"

# Specify your license. Example: MIT, Apache-2.0, or other SPDX identifier
license = "MIT"

# Optional metadata fields
documentation = "https://docs.rs/rust_pact"
homepage = "https://github.com/cyberfly-io/rust-pact"
repository = "https://github.com/cyberfly-io/rust-pact"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = { version = "0.4" }
blake2 = "0.10"
base64 = "0.21"
hex = "0.4"
ed25519-dalek = "1.0"
rand = "0.8"
